# Sensor

./: Sensor.cabal
src/: Main.hs  SensorReadout.hs
