name:                 Sensor
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Patryk Zieliński
maintainer:           patrykzielu@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Sensor
  main-is:              Main.hs
  other-modules:        SensorReadout
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                        , trifecta
                        , raw-strings-qq
                        , containers
  hs-source-dirs:       src
  default-language:     Haskell2010
